infrastructure/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: l6m5-software-engineering-and-devops
