infrastructure/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: l6m5-softeng-devops-frontend-ingress
  namespace: l6m5-software-engineering-and-devops
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`l6m5-softeng-devops.thomasfairey.co.uk`)
      services:
        - kind: Service
          name: frontend
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: l6m5-softeng-devops-application-ingress
  namespace: l6m5-software-engineering-and-devops
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`l6m5-softeng-devops.thomasfairey.co.uk`) && PathPrefix(`/api`)
      services:
        - kind: Service
          name: application
          port: 80
      middlewares:
        - name: l6m5-softeng-devops-stripprefix
          namespace: l6m5-software-engineering-and-devops
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: l6m5-softeng-devops-stripprefix
  namespace: l6m5-software-engineering-and-devops
spec:
  stripPrefix:
    prefixes:
      - /api
